# ShockFind-

./: .gitignore  README.md  __init__.py  environment_droplet.yml  main__example.py  main_example.py  plot_SB_shocks_rot_back.py  ytenv.yml
SB_plots/: plot_SB_shocks.py
dev/: shockfind_interface.backup--plots  shockfind_interface.py  shockfind_interface_layers.py
legacy/: find_shocks_utils.py  sh_finder_ez.py
src/: shockfind_interface.py
src/shockfindCore/: shockfind.py
src/shockfindCoreJ/: churchkey.py  shockfind.py
src/shockfindCore_cpp/: CMakeLists.txt  __init__.py  bindings.cpp  core.cpp  core.hpp  mpi_dispatch.cpp  mpi_dispatch.hpp  types.hpp
utils/: logger.py  utils.py
visu/: MakePlot.py  MakeRotPlot.py  plot_hists.py
